--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,6 @@ zip = "2.6.1"
 serde_yaml = "0.9.34"
 
 [dev-dependencies]
+hyper = { version = "1.6.0", features = ["server"] }
 iron = "0.6.1"
+tempfile = "3.19.1"
