--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,3 +10,13 @@ updates:
    directory: "/"
    schedule:
      interval: weekly
+
+ - package-ecosystem: "cargo"
+   directory: "/"
+   schedule:
+     interval: weekly
+
+ - package-ecosystem: "github-actions"
+   directory: "/"
+   schedule:
+     interval: weekly
