--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,5 @@ serde_yaml = "0.9.34"
 [dev-dependencies]
 hyper = { version = "1.6.0", features = ["server"] }
 iron = "0.6.1"
+rand = "0.9.1"
 tempfile = "3.19.1"
